--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
         function add(a,b){
             return a+b
         }
-        add(1);
+        add(1，2);
 
         console.log(100)
     </script>
